Fix ElasticSwith vertical align

--- a/src/components/ui/EltasticSwitch/ElasticSwitch.module.sass
+++ b/src/components/ui/EltasticSwitch/ElasticSwitch.module.sass
@@ -52,14 +52,8 @@
 .Size--sm
   height: 42px
 
-  .Item
-    line-height: 32px
-
 .Size--md
   height: 48px
-
-  .Item
-    line-height: 38px
 
 // ------------ DARK ------------ //
 
